--- a/cn/weapon/BleedingScourge.html
+++ b/cn/weapon/BleedingScourge.html
@@ -39,8 +39,9 @@
         <main class="main-content">
             <h1>血色鞭挞</h1>
             <p> 
-                血色鞭挞是一把月球领主后的召唤武器，是元素长鞭的上位合成。<br>
-                血色鞭挞左键攻击到敌人会是召唤物集中攻击敌人，并且从天上落下三个血雨，血雨造成武器面板的二分之一伤害。<br>
+                血色鞭挞是一把月球领主后的召唤武器，用元素长鞭、15个血石核心和5个毁灭之灵在远古操纵机处合成。<br>
+                血色鞭挞左键攻击到敌人会是召唤物集中攻击敌人，并且从天上落下三个血雨到第一个命中的目标位置<br>
+                血雨落下后会炸开造成武器面板的二分之一的范围伤害。<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
             <img src="BleedingScourge.gif" alt="BleedingScourge" class="pwertGIF" loading="lazy">
