--- a/cn/weapon/ElementWhip.html
+++ b/cn/weapon/ElementWhip.html
@@ -39,7 +39,7 @@
         <main class="main-content">
             <h1>元素长鞭</h1>
             <p> 
-                元素长鞭是一把月球领主后的召唤武器，是万花筒的上位合成。<br>
+                元素长鞭是一把月球领主后的召唤武器，由万花筒和5个夜明锭、5个生命合金、5个星系异石，在远古操纵机处合成。<br>
                 左键攻击会使召唤物集体攻击敌人，并且附带元素之火减益。<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
