--- a/cn/weapon/GreatswordofJudgement.html
+++ b/cn/weapon/GreatswordofJudgement.html
@@ -39,9 +39,9 @@
         <main class="main-content">
             <h1>制裁大剑</h1>
             <p> 
-                制裁大剑是一把可制作的月亮领主后的阔剑类武器。<br>
-                它会发射一个追踪目标的弹幕，弹幕在飞行过程中所产生的白色粒子效果并没有碰撞判定<br>
-                而在击中目标后会产生三颗火球，拥有武器33%的伤害<br>
+                制裁大剑是一把月亮领主后的阔剑类武器，用7个夜明锭在远古操纵机处合成。<br>
+                它会发射一个追踪目标的弹幕，弹幕在飞行过程中两侧产生小光球不会造成伤害，追踪目标后的散射弹幕也没有伤害。<br>
+                而在击中目标后会产生三颗造成多段伤害的散射火球，火球每段伤害是武器面板25%<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
             <img src="GreatswordofJudgement.gif" alt="GreatswordofJudgement" class="pwertGIF" loading="lazy">
