--- a/cn/weapon/PerfectDark.html
+++ b/cn/weapon/PerfectDark.html
@@ -40,7 +40,8 @@
             <h1>完美黑暗</h1>
             <p> 
                 完美黑暗是一把困难模式前的阔剑类武器，掉落自<a href="https://calamitymod.wiki.gg/wiki/The_Hive_Mind" class="clickable-word">腐巢意志</a><br>
-                它会发射毒沼炸弹，接触敌人后爆炸<br>
+                它会以抛物线发射受重力剧烈影响的毒沼炸弹，接触敌人会直接爆炸，接触物块会黏附并延迟数秒后爆炸<br>
+                爆炸造成100%武器面板的范围伤害，并对受到伤害的目标造成（）（）减益<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
             <img src="PerfectDark.gif" alt="PerfectDark" class="pwertGIF" loading="lazy">
@@ -63,9 +64,7 @@
             <p class="item-usetimer">使用时间: 24</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                发射恶毒球体，黏附于物块并爆炸<br>
             </p>
         </div>        
     </div>
