--- a/cn/weapon/SubmarineShocker.html
+++ b/cn/weapon/SubmarineShocker.html
@@ -40,8 +40,8 @@
             <h1> 渊海短剑</h1>
             <p> 
                 渊海短剑是一把困难模式下的短剑类武器，掉落自渊海灾虫<br>
-                它会发射随机移动的电弧珠，追钟一定范围内的敌人<br>
-                真近战攻击会生成大量受重力影响的电火花，造成多端伤害<br>
+                它会发射随机移动的电弧珠，追踪一定范围内的敌人<br>
+                真近战攻击会生成大量受重力影响的电火花，造成多段伤害，在真近战同时命中多个目标时有意想不到的效果（说的就是你未展开的蠕虫boss）<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
             <img src="SubmarineShocker.gif" alt="SubmarineShocker" class="pwertGIF" loading="lazy">
