--- a/cn/weapon/TheEnforcer.html
+++ b/cn/weapon/TheEnforcer.html
@@ -39,7 +39,7 @@
         <main class="main-content">
             <h1>暴政</h1>
             <p> 
-                暴政是一把月亮领主后的阔剑类武器，可由圣火之刃升级而来。<br>
+                暴政是一把月亮领主后的阔剑类武器，可由圣火之刃和5个宇宙锭在星宇砧处合成。<br>
                 使用时挥舞刀刃造成100%武器面板伤害并在周围生成宇宙之火<br>
                 宇宙之火将逐渐靠近人物，在接触敌人时爆炸,造成25%武器面板伤害并对目标造成霜冻减益<br>
                 宇宙之火存在一段时间后将自动爆炸<br>
