--- a/cn/weapon/GhostFireWhip.html
+++ b/cn/weapon/GhostFireWhip.html
@@ -39,8 +39,11 @@
         <main class="main-content">
             <h1>鬼火鞭</h1>
             <p> 
-                鬼火鞭是一把月球领主后的召唤武器，是骨鞭的上位合成。<br>
-                鬼火鞭攻击到敌人会产生三个鬼火，鬼火会追踪敌人攻击，并且造成范围伤害。<br>
+                鬼火鞭是一把月球领主后的召唤武器，由脊柱骨鞭和5个毁灭之灵在远古操纵机处合成。<br>
+                鬼火鞭会对命中的第一个敌人造成100%武器面板伤害，对命中的第二个敌人造成50%面板伤害<br>
+                若同时命中多个敌人，则对其余的敌人只造成5点固定伤害<br>
+                在使用时，鬼火鞭末端会留下鬼火尾迹，这个尾迹并无伤害，仅作为攻击范围提示<br>
+                鬼火鞭攻击到敌人会在玩家附近随机位置产生三个鬼火，鬼火会追踪敌人攻击，并且造成范围伤害。<br>
                 鬼火的伤害仅有武器面板的四分之一。<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
@@ -61,8 +64,8 @@
             <p class="item-usetimer">使用时间: 30</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                “一把很长的鞭子，由地牢冤魂的怒火编制而成；<br>
-                纯粹的热情从地狱散发出来，鼓励你找出谁冤枉了你。”
+                一把很长的鞭子，由地牢冤魂的怒火编制而成<br>
+                “纯粹的热情从地狱散发出来，鼓励你找出谁冤枉了你。”
             </p>
         </div>        
     </div>
