--- a/cn/weapon/WhiplashGalactica.html
+++ b/cn/weapon/WhiplashGalactica.html
@@ -39,13 +39,14 @@
         <main class="main-content">
             <h1>银河鞭挞</h1>
             <p> 
-                银河鞭挞是一把月球领主后的召唤武器，由元素长鞭的上位合成。<br>
+                银河鞭挞是一把月球领主后的召唤武器，由元素长鞭和5个宇宙锭，在星宇砧处合成。<br>
                 击中敌人后进行死亡标记，并发射宇宙火球。<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
             <img src="WhiplashGalactica.gif" alt="WhiplashGalactica" class="pwertGIF" loading="lazy">
             <p>
                 宇宙火球仅造成武器面板的二分之一伤害；<br>
+                宇宙火球会追踪命中的第一个敌人<br>
                 宇宙火球命中后会爆裂出额外弹幕。
             </p>
             <p class="extra-tip"></p>
