--- a/cn/core/weaponList.html
+++ b/cn/core/weaponList.html
@@ -2138,13 +2138,13 @@
                     <p>幽魂苦无</p>
                 </div>
 
-                <div class="weapon-item" onclick="location.href='/cn/weapon/Minishark.html'">
+                <!--<div class="weapon-item" onclick="location.href='/cn/weapon/Minishark.html'">
                     <div class="image-container">
                         <img src="/cn/weapon/Minishark.png" alt="Minishark">
                     </div>
                     
                     <p>迷你鲨</p>
-                </div>
+                </div>-->
 
                 <div class="weapon-item" onclick="location.href='/cn/weapon/HandGun.html'">
                     <div class="image-container">
