--- a/404.html
+++ b/404.html
@@ -35,7 +35,7 @@
             </nav>
         </div>
         <div class="main-content">
-            <img src="/asset/M2.gif" alt="错误图标" class="error-icon">
+            <img src="asset/M2.gif" alt="错误图标" class="error-icon">
             <h1>页面未找到</h1>
             <p>您尝试访问的页面还在施工中</p>
             <p>您可以向开发人员反馈来催促完善该界面，或使用左侧的菜单导航至其他页面</p>
