--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home-灾厄大修Wiki</title>
-    <link rel="icon" href="asset/other/icon_small.png" type="image/x-icon">
+    <link rel="icon" href="/asset/other/icon_small.png" type="image/x-icon">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="languageSelector.css">
     <link rel="stylesheet" href="searchTool/searchStyle.css">
@@ -37,13 +37,13 @@
         </aside>
 
         <main class="main-content">
-            <img src="asset/IntactLogo.png" alt="Logo">
+            <img src="/asset/IntactLogo.png" alt="Logo">
             <h1>欢迎来到灾厄大修Wiki</h1>
             <p>这是一个为灾厄大修玩家和开发者提供的资料库，您可以在这里查询关于模组内容的各种信息</p>
             
             <div class="categories">
                 <section class="category" id = "1">
-                    <img src="asset/weapon/DragonsWord.png" alt="武器图标">
+                    <img src="/asset/weapon/DragonsWord.png" alt="武器图标">
                     <h2>武器</h2>
                     <p>浏览模组中的所有新增的武器</p>
                 </section>
@@ -55,7 +55,7 @@
                 </section>
         
                 <section class="category" id = "3">
-                    <img src="asset/npc/skullKing.gif" alt="生物图标">
+                    <img src="/asset/npc/skullKing.gif" alt="生物图标">
                     <h2>生物</h2>
                     <p>查看模组中新增和调整的生物</p>
                 </section>
