--- a/cn/weapon/AbsoluteZero.html
+++ b/cn/weapon/AbsoluteZero.html
@@ -39,17 +39,17 @@
         <main class="main-content">
             <h1>绝对零度</h1>
             <p> 
-                绝对零度是一把.....的....武器，掉落.....<br>
+                绝对零度是一把困难模式的阔剑类武器，售卖自大法师<br>
                 更多具体描述...<br>
                 更多具体描述...<br>
                 更多具体描述...<br>
                 更多具体描述...<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="AbsoluteZero.png" alt="AbsoluteZero" class="pwertGIF" loading="lazy">
+            <img src="AbsoluteZero.gif" alt="AbsoluteZero" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Absolute_Zero">查看原版信息</a>
             </button>
             <button id ="href_button">
                 <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
@@ -59,16 +59,14 @@
         <div class="image-block">
             <h1 class="img-Item-Title">绝对零度</h1>
             <img src="AbsoluteZero.png" alt="AbsoluteZero">
-            <p class="item-id">内部名: 绝对零度</p>
+            <p class="item-id">内部名: AbsoluteZero</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 75</p>
+            <p class="item-knockback">击退: 4</p>
+            <p class="item-usetimer">使用时间: 20</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                发射极寒冰弹
             </p>
         </div>        
     </div>
