--- a/cn/weapon/WaveSkipper.html
+++ b/cn/weapon/WaveSkipper.html
@@ -39,9 +39,9 @@
         <main class="main-content">
             <h1>越浪蛟</h1>
             <p> 
-                越浪蛟是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                越浪蛟是一把困难模式的投掷类武器，掉落渊海灾虫<br>
+                鼠标左键投掷沙牙，最多可穿透两个敌人<br>
+                更多具体描述...<br>  
                 更多具体描述...<br>
                 更多具体描述...<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
