--- a/cn/weapon/WaveSkipper.html
+++ b/cn/weapon/WaveSkipper.html
@@ -39,7 +39,7 @@
         <main class="main-content">
             <h1>越浪蛟</h1>
             <p> 
-                越浪蛟是一把困难模式的投掷类武器，掉落渊海灾虫<br>
+                越浪蛟是一把困难模式的投掷类武器，掉落渊海灾虫??<br>
                 鼠标左键投掷沙牙，最多可穿透两个敌人<br>
                 更多具体描述...<br>  
                 更多具体描述...<br>
