--- a/cn/weapon/WaveSkipper.html
+++ b/cn/weapon/WaveSkipper.html
@@ -39,11 +39,12 @@
         <main class="main-content">
             <h1>越浪蛟</h1>
             <p> 
-                越浪蛟是一把困难模式的投掷类武器，掉落渊海灾虫??<br>
-                鼠标左键投掷沙牙，最多可穿透两个敌人<br>
-                更多具体描述...<br>  
-                更多具体描述...<br>
-                更多具体描述...<br>
+                越浪蛟是一把困难模式的投掷类武器，掉落渊海灾虫<br>
+                鼠标左键投掷一发潜跃沙牙，能穿透墙壁和至多两个敌人<br>
+                在穿透墙壁后，潜越沙牙会被加速<br>
+                潜伏攻击左键投掷两发巨大的潜越沙牙
+                鼠标右键投掷弹跳沙牙，可以无限穿透敌人，并能在物块表面滑行和弹跳<br>  
+                潜伏攻击右键释放从天而降的数个沙牙<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
             <img src="WaveSkipper.png" alt="WaveSkipper" class="pwertGIF" loading="lazy">
@@ -59,11 +60,11 @@
         <div class="image-block">
             <h1 class="img-Item-Title">越浪蛟</h1>
             <img src="WaveSkipper.png" alt="WaveSkipper">
-            <p class="item-id">内部名: 越浪蛟</p>
+            <p class="item-id">内部名: WaveSkipper</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 70</p>
+            <p class="item-knockback">击退: 5</p>
+            <p class="item-usetimer">使用时间: 22</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
                 这里是物品在游戏中的描述<br>
