--- a/cn/weapon/AbsoluteZero.html
+++ b/cn/weapon/AbsoluteZero.html
@@ -40,10 +40,8 @@
             <h1>绝对零度</h1>
             <p> 
                 绝对零度是一把困难模式的阔剑类武器，售卖自大法师<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                使用时发射极寒冰弹，冰弹在击中敌人时会产生扩散弹幕<br>
+                
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
             <img src="AbsoluteZero.gif" alt="AbsoluteZero" class="pwertGIF" loading="lazy">
