--- a/cn/weapon/WaveSkipper.html
+++ b/cn/weapon/WaveSkipper.html
@@ -47,7 +47,7 @@
                 潜伏攻击右键释放从天而降的数个沙牙<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="WaveSkipper.png" alt="WaveSkipper" class="pwertGIF" loading="lazy">
+            <img src="WaveSkipper.gif" alt="WaveSkipper" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
