--- a/cn/weapon/Alluvion.html
+++ b/cn/weapon/Alluvion.html
@@ -39,14 +39,15 @@
         <main class="main-content">
             <h1>啸流</h1>
             <p> 
-                啸流是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                啸流是一把月球领主后的远程武器，由季风升级而来<br>
+                左键发射五发箭矢，并将木箭转化为海洋箭矢<br>
+                击中敌人时，会额外发射鲨鱼<br>
+                右键在短暂蓄力后会向四面八方发射箭矢<br>
+                如果使用木箭，它会转化为更多的海洋箭矢<br>
+                "杀害鲨鲨太残忍了"<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="Alluvion.png" alt="Alluvion" class="pwertGIF" loading="lazy">
+            <img src="Alluvion.gif" alt="Alluvion" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -59,16 +60,16 @@
         <div class="image-block">
             <h1 class="img-Item-Title">啸流</h1>
             <img src="Alluvion.png" alt="Alluvion">
-            <p class="item-id">内部名: 啸流</p>
+            <p class="item-id">内部名: Alluvion</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 165</p>
+            <p class="item-knockback">击退: 4</p>
+            <p class="item-usetimer">使用时间: 15</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                将木箭转化为海洋箭矢<br>
+                右键蓄力以海洋千钧之力摧毁敌人<br>
+                如果使用木箭，右键攻击会将箭矢转化为更多的海洋箭<br>
             </p>
         </div>        
     </div>
