--- a/cn/weapon/BlossomFlux.html
+++ b/cn/weapon/BlossomFlux.html
@@ -39,14 +39,14 @@
         <main class="main-content">
             <h1>叶流</h1>
             <p> 
-                叶流是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                叶流是一把困难模式的弓，掉落自世纪之花<br>
+                左键会快速发射连续的生命叶箭矢<br>
+                右键在短暂蓄力后，会发射三发强大的生命爆弹<br>
+                每发生命爆弹在击中敌人或触碰物块时产生孢子弹幕<br>
+            
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="BlossomFlux.png" alt="BlossomFlux" class="pwertGIF" loading="lazy">
+            <img src="BlossomFlux.gif" alt="BlossomFlux" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,14 +61,14 @@
             <img src="BlossomFlux.png" alt="BlossomFlux">
             <p class="item-id">内部名: 叶流</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
+            <p class="item-damage">伤害: 58</p>
             <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-usetimer">使用时间: 4</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                快速发射生命叶箭矢<br>
+                右键蓄力发射强大的丛林爆弹<br>
+                
             </p>
         </div>        
     </div>
