--- a/cn/weapon/GrandGuardian.html
+++ b/cn/weapon/GrandGuardian.html
@@ -39,14 +39,14 @@
         <main class="main-content">
             <h1>大守卫者</h1>
             <p> 
-                大守卫者是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                大守卫者是一把月球领主后的近战武器，由雄伟之护升级而来<br>
+                左键连续发射剑刃，剑刃在刺入敌人短暂延迟后爆炸<br>
+                若使用剑身攻击敌人，则转而在玩家后方飞出强大的剑刃<br>
+                目标防御会加成到真近战伤害暴击值中<br>
+                
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="GrandGuardian.png" alt="GrandGuardian" class="pwertGIF" loading="lazy">
+            <img src="GrandGuardian.gif" alt="GrandGuardian" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
