--- a/cn/weapon/MarksmanBow.html
+++ b/cn/weapon/MarksmanBow.html
@@ -39,14 +39,13 @@
         <main class="main-content">
             <h1>猎人长弓</h1>
             <p> 
-                猎人长弓是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                猎人长弓是一把困难模式的远程武器，由灵气制作而成<br>
+                左键同时发射三支箭<br>
+                每个箭矢在击中敌人时都有概率生成一个白色幽灵，并追踪附近的敌人<br>
+                
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="MarksmanBow.png" alt="MarksmanBow" class="pwertGIF" loading="lazy">
+            <img src="MarksmanBow.gif" alt="MarksmanBow" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,14 +60,14 @@
             <img src="MarksmanBow.png" alt="MarksmanBow">
             <p class="item-id">内部名: 猎人长弓</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 35</p>
+            <p class="item-knockback">击退: 6</p>
+            <p class="item-usetimer">使用时间: 18</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                快准狠的射出一发精准的箭矢，是一场狩猎的关键<br>
+                发射的箭矢在消失时有概率生成一个幽灵<br>
+                
             </p>
         </div>        
     </div>
