--- a/cn/weapon/NeutronScythe.html
+++ b/cn/weapon/NeutronScythe.html
@@ -39,14 +39,16 @@
         <main class="main-content">
             <h1>黑洞使者</h1>
             <p> 
-                黑洞使者是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                黑洞使者是一把中子素系列的盗贼武器，由中子星锭在欧米茄物质聚合仪处合成<br>
+                左键扔出一柄镰刀，并在飞行一段时间后返回<br>
+                
+                潜伏攻击会向四周丢出一圈镰刀<br>
+                镰刀在飞行时会向附近的目标发射伽马射线，并在飞行途中留下数个翘曲点<br>
+                有趣的是，当镰刀被墙壁反弹后并不会飞向玩家，而是折跃后再返回<br>
+                “他转身就走了，像下定了某种决心”<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="NeutronScythe.gif" alt="NeutronScythe" class="pwertGIF" loading="lazy">
+            <img src="NeutronScythewiki.gif" alt="NeutronScythe" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,9 +63,9 @@
             <img src="NeutronScythe.gif" alt="NeutronScythe">
             <p class="item-id">内部名: NeutronScythe</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
+            <p class="item-damage">伤害: 322</p>
             <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-usetimer">使用时间: 16</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
                 这里是物品在游戏中的描述<br>
