--- a/cn/weapon/TheDarkMaster.html
+++ b/cn/weapon/TheDarkMaster.html
@@ -39,14 +39,15 @@
         <main class="main-content">
             <h1>黑暗大师之剑</h1>
             <p> 
-                黑暗大师之剑.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                黑暗大师之剑是困难模式的近战武器，由光束剑和魔光剑升级而来<br>
+                左键发射旋转光刃<br>
+                旋转光刃至多可穿透两个敌人，并在触碰到物块时停下<br>
+                使用剑身攻击目标后召唤暗黑契约，三个暗影复制体将围绕在玩家周围，发射旋转光刃协同打击目标<br>
+                当玩家受击时，会立刻遣散暗黑契约，并给予玩家10秒的黑暗恐惧减益，在此期间暗黑契约不会再次生效<br>
+                当切换武器时，就受击那样，暗黑契约也会被遣散，此时玩家会被给予3秒的黑暗恐惧减益<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="TheDarkMaster.png" alt="TheDarkMaster" class="pwertGIF" loading="lazy">
+            <img src="TheDarkMaster.gif" alt="TheDarkMaster" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
