--- a/cn/weapon/WaveSkipper.html
+++ b/cn/weapon/WaveSkipper.html
@@ -39,7 +39,7 @@
         <main class="main-content">
             <h1>越浪蛟</h1>
             <p> 
-                越浪蛟是一把困难模式的投掷类武器，掉落渊海灾虫<br>
+                越浪蛟是一把困难模式的投掷类武器，掉落自渊海灾虫<br>
                 鼠标左键投掷一发潜跃沙牙，能穿透墙壁和至多两个敌人<br>
                 在穿透墙壁后，潜越沙牙会被加速<br>
                 潜伏攻击左键投掷两发巨大的潜越沙牙
@@ -67,9 +67,9 @@
             <p class="item-usetimer">使用时间: 22</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                左键发射在沙地中潜跃的沙牙，潜伏攻击发射三发巨大的沙牙<br>
+                右键发射弹跳沙牙，潜伏攻击令数个疾速的沙牙从天而降<br>
+                
             </p>
         </div>        
     </div>
