--- a/cn/weapon/Contagion.html
+++ b/cn/weapon/Contagion.html
@@ -39,14 +39,15 @@
         <main class="main-content">
             <h1>瘟疫</h1>
             <p> 
-                瘟疫是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                瘟疫是一把月球领主后的远程武器，由幻魔升级而来，它是射手的毕业级武器之一<br>
+                左键发射霍乱箭矢，并在途中释放瘟疫炸弹<br>
+                瘟疫炸弹会自动追踪附近的敌人<br>
+                右键召唤从天而降的生命蜜蜂<br>
+                生命蜜蜂会自动追踪附近的敌人，在飞行一段距离或接触物块后会垂直返回天空<br>
+                瘟疫的弹幕会造成瘟疫减益<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="Contagion.png" alt="Contagion" class="pwertGIF" loading="lazy">
+            <img src="Contagion.gif" alt="Contagion" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -59,16 +60,16 @@
         <div class="image-block">
             <h1 class="img-Item-Title">瘟疫</h1>
             <img src="Contagion.png" alt="Contagion">
-            <p class="item-id">内部名: 瘟疫</p>
+            <p class="item-id">内部名: Contagion</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 280</p>
+            <p class="item-knockback">击退: 5</p>
+            <p class="item-usetimer">使用时间: 20</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                左键发射速度极快的霍乱箭矢，途中释放多个瘟疫炸弹<br>
+                右键召唤花园世界的生命蜜蜂<br>
+                慈父将始终注视着这弓的持有者<br>
             </p>
         </div>        
     </div>
