--- a/cn/weapon/FadingGlory.html
+++ b/cn/weapon/FadingGlory.html
@@ -39,14 +39,14 @@
         <main class="main-content">
             <h1>残怨</h1>
             <p> 
-                残怨是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                残怨是一把月球领主后的战士武器，由大守卫者升级而来<br>
+                左键刺出连续的剑刃，击中目标后额外生成从天而降的孤魂切打击目标<br>
+                剑刃会刺入目标体内，在短暂延迟后爆炸，并释放出一条血触手<br>
+                使用剑身攻击目标时，若目标为有机体，则转而治疗玩家；若目标为无机体，则转而释放大量电火花<br>
+                
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="FadingGlory.png" alt="FadingGlory" class="pwertGIF" loading="lazy">
+            <img src="FadingGlory.gif" alt="FadingGlory" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
