--- a/cn/weapon/FrostcrushValari.html
+++ b/cn/weapon/FrostcrushValari.html
@@ -39,14 +39,14 @@
         <main class="main-content">
             <h1>寒霜回旋镖</h1>
             <p> 
-                寒霜回旋镖是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                寒霜回旋镖是一把困难模式的盗贼武器，由寒元锭合成<br>
+                左键发射寒霜回旋镖，并在飞行一段距离后返回，并造成霜冻减益<br>
+                潜伏攻击投掷一个大型回旋镖和两个追踪目标的伴生回旋镖<br>
+                大型回旋镖在击中敌人时会额外产生冰刺追踪目标<br>
+                
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="FrostcrushValari.png" alt="FrostcrushValari" class="pwertGIF" loading="lazy">
+            <img src="FrostcrushValari.gif" alt="FrostcrushValari" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,9 +61,9 @@
             <img src="FrostcrushValari.png" alt="FrostcrushValari">
             <p class="item-id">内部名: FrostcrushValari</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 89</p>
+            <p class="item-knockback">击退: 12</p>
+            <p class="item-usetimer">使用时间: 21</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
                 这里是物品在游戏中的描述<br>
