--- a/cn/weapon/MajesticGuard.html
+++ b/cn/weapon/MajesticGuard.html
@@ -39,14 +39,14 @@
         <main class="main-content">
             <h1>雄伟之护</h1>
             <p> 
-                雄伟之护是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                雄伟之护是一把困难模式的战士武器，由精金剑升级而来<br>
+                左键连续发射剑刃，剑刃可无限穿透敌人，并在触碰墙壁后停下<br>
+                刺入墙壁的剑刃在短暂延迟后爆炸<br>
+                若使用剑身攻击敌人，则转而概率为玩家回复生命值<br>
+                
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="MajesticGuard.png" alt="MajesticGuard" class="pwertGIF" loading="lazy">
+            <img src="MajesticGuard.gif" alt="MajesticGuard" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
