--- a/cn/weapon/MirrorBlade.html
+++ b/cn/weapon/MirrorBlade.html
@@ -39,14 +39,13 @@
         <main class="main-content">
             <h1>镜之刃</h1>
             <p> 
-                镜之刃.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                镜之刃是一把月球领主后的近战武器，掉落自无尽虚空<br>
+                左键发射魔能镜刃<br>
+                镜刃会随玩家的移动而翻飞<br>
+                
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="MirrorBlade.png" alt="MirrorBlade" class="pwertGIF" loading="lazy">
+            <img src="MirrorBlade.gif" alt="MirrorBlade" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
