--- a/cn/weapon/TheMaelstrom.html
+++ b/cn/weapon/TheMaelstrom.html
@@ -39,14 +39,15 @@
         <main class="main-content">
             <h1>幽漩风暴</h1>
             <p> 
-                幽漩风暴是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                幽漩风暴是一把月球领主后的远程武器，由风暴升级而来<br>
+                左键发射激流水箭，造成激流减益<br>
+                激流水箭至多可穿透一个敌人<br>
+                如果击中敌人，后续的攻击会额外释放一次水压炸弹，造成范围性伤害并施加激流减益<br>
+                右键在短暂蓄力后释放一个充能猎魂鲨<br>
+                充能猎魂鲨也至多可穿透一个敌人<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="TODO.png" alt="TODO" class="pwertGIF" loading="lazy">
+            <img src="TheMaelstrom.gif" alt="TheMaelstrom" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -58,17 +59,17 @@
 
         <div class="image-block">
             <h1 class="img-Item-Title">幽漩风暴</h1>
-            <img src="TODO.png" alt="TODO">
-            <p class="item-id">内部名: 幽漩风暴</p>
+            <img src="TheMaelstrom.png" alt="TheMaelstrom·">
+            <p class="item-id">内部名: TheMaelstrom</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 530</p>
+            <p class="item-knockback">击退: 3</p>
+            <p class="item-usetimer">使用时间: 15</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                左键发射激流水箭，击中敌人后释放一水压炸弹<br>
+                右键蓄力释放一个充能猎魂鲨<br>
+                
             </p>
         </div>        
     </div>
