--- a/cn/weapon/Alluvion.html
+++ b/cn/weapon/Alluvion.html
@@ -45,7 +45,7 @@
                 右键在短暂蓄力后会向四面八方发射箭矢<br>
                 如果使用木箭，它会转化为更多的海洋箭矢<br>
                 "杀害鲨鲨太残忍了"<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
             <img src="Alluvion.gif" alt="Alluvion" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
