--- a/cn/weapon/BlossomFlux.html
+++ b/cn/weapon/BlossomFlux.html
@@ -44,7 +44,7 @@
                 右键在短暂蓄力后，会发射三发强大的生命爆弹<br>
                 每发生命爆弹在击中敌人或触碰物块时产生孢子弹幕<br>
             
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
             <img src="BlossomFlux.gif" alt="BlossomFlux" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
