--- a/cn/weapon/Contagion.html
+++ b/cn/weapon/Contagion.html
@@ -45,7 +45,7 @@
                 右键召唤从天而降的生命蜜蜂<br>
                 生命蜜蜂会自动追踪附近的敌人，在飞行一段距离或接触物块后会垂直返回天空<br>
                 瘟疫的弹幕会造成瘟疫减益<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
             <img src="Contagion.gif" alt="Contagion" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
