--- a/cn/weapon/DarkFrostSolstice.html
+++ b/cn/weapon/DarkFrostSolstice.html
@@ -39,14 +39,15 @@
         <main class="main-content">
             <h1>凛冬神性</h1>
             <p> 
-                凛冬神性是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                凛冬神性是一把月球领主后的雪球炮系列的最终武器，由冰河时代和弑君升级而来<br>
+                左键发射大量冰雹和极地幽火，造成霜冻、冻伤和冰河时代减益，并有概率冻住敌人<br>
+                极地幽火可以追踪目标，在击中目标或物块时产生小范围结晶冰刺<br>
+                每开火20次进入超载状态，短暂蓄力后在鼠标处生成一个巨大的冰柱<br>
+                手持武器时会在玩家背后悬浮一个炫酷的背饰<br>
+                
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
-            <img src="DarkFrostSolstice.png" alt="DarkFrostSolstice" class="pwertGIF" loading="lazy">
+            <img src="DarkFrostSolstice.gif" alt="DarkFrostSolstice" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,14 +62,14 @@
             <img src="DarkFrostSolstice.png" alt="DarkFrostSolstice">
             <p class="item-id">内部名: DarkFrostSolstice</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
+            <p class="item-damage">伤害: 102</p>
+            <p class="item-knockback">击退: 4</p>
             <p class="item-usetimer">使用时间: 10</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                发射冰雹和极地幽火，攻击有概率冻住敌人<br>
+                每开火20次进入一次超频爆发，在鼠标处生成一个巨大的冰柱<br>
+                
             </p>
         </div>        
     </div>
