--- a/cn/weapon/DeadSunsWind.html
+++ b/cn/weapon/DeadSunsWind.html
@@ -39,14 +39,14 @@
         <main class="main-content">
             <h1>薄冥之风</h1>
             <p> 
-                薄冥之风是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                薄冥之风是一把困难模式的喷火器武器，由冥思构造体合成<br>
+                消耗凝胶发射高温等离子体，击中目标后产生爆炸<br>
+                连续击中目标后引发巨大爆炸<br>
+                高温等离子体击中墙体后会被反弹并追踪敌人<br>
+                
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
-            <img src="DeadSunsWind.png" alt="DeadSunsWind" class="pwertGIF" loading="lazy">
+            <img src="DeadSunsWind.gif" alt="DeadSunsWind" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,14 +61,15 @@
             <img src="DeadSunsWind.png" alt="DeadSunsWind">
             <p class="item-id">内部名: 薄冥之风</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 100</p>
+            <p class="item-knockback">击退: 3</p>
+            <p class="item-usetimer">使用时间: 22</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                发射一束聚焦的高温等离子体，触碰物块后反弹<br>
+                等离子射线反弹后会追踪最近的敌人<br>
+                连续命中时引发巨大的爆炸<br>
+                “它是怎么把凝胶变成这玩意儿的？”
             </p>
         </div>        
     </div>
