--- a/cn/weapon/FlurrystormCannon.html
+++ b/cn/weapon/FlurrystormCannon.html
@@ -39,14 +39,14 @@
         <main class="main-content">
             <h1>雪球机关枪</h1>
             <p> 
-                雪球机关枪是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                雪球机关枪是一把困难模式前的雪球炮系列武器，由雪球炮升级而来<br>
+                左键发射大量雪球，火力会随弹量减少而增强<br>
+                火力增强后，雪球中会附带冰雹，并造成霜冻和冰河时代减益<br>
+                有概率进入超载状态，瞬间喷发出大量雪球和冰雹<br>
+                
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
-            <img src="FlurrystormCannon.png" alt="FlurrystormCannon" class="pwertGIF" loading="lazy">
+            <img src="FlurrystormCannon.gif" alt="FlurrystormCannon" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -62,13 +62,13 @@
             <p class="item-id">内部名: FlurrystormCannon</p>
             <p class="item-property">基本属性</p>
             <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-knockback">击退: 1</p>
+            <p class="item-usetimer">使用时间: 16</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                发射大量雪球，火力随着弹药减少而变强<br>
+                有概率进入超载状态，喷发出大量雪球和冰雹<br>
+                “这足以让你在雪仗中立于不败之地”<br>
             </p>
         </div>        
     </div>
