--- a/cn/weapon/FrostcrushValari.html
+++ b/cn/weapon/FrostcrushValari.html
@@ -44,7 +44,7 @@
                 潜伏攻击投掷一个大型回旋镖和两个追踪目标的伴生回旋镖<br>
                 大型回旋镖在击中敌人时会额外产生冰刺追踪目标<br>
                 
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                它的最佳前缀是<a href="https://calamitymod.wiki.gg/wiki/Modifiers" class="clickable-word">化境</a>
             </p>
             <img src="FrostcrushValari.gif" alt="FrostcrushValari" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
@@ -66,9 +66,8 @@
             <p class="item-usetimer">使用时间: 21</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                潜伏攻击将投掷出一个巨大的回旋镖和两个追踪目标的伴生回旋镖<br>
+                
             </p>
         </div>        
     </div>
