--- a/cn/weapon/MarksmanBow.html
+++ b/cn/weapon/MarksmanBow.html
@@ -43,7 +43,7 @@
                 左键同时发射三支箭<br>
                 每个箭矢在击中敌人时都有概率生成一个白色幽灵，并追踪附近的敌人<br>
                 
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
             <img src="MarksmanBow.gif" alt="MarksmanBow" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
