--- a/cn/weapon/NettlevineGreatbow.html
+++ b/cn/weapon/NettlevineGreatbow.html
@@ -39,14 +39,14 @@
         <main class="main-content">
             <h1>荆棘藤</h1>
             <p> 
-                荆棘藤是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                荆棘藤是一把月球领主后的射手武器，由龙蒿锭合成<br>
+                左键发射四发箭矢，并造成毒液减益<br>
+                每射击四次触发一轮青蒿扫射<br>
+                青蒿扫射受益于三次攻击，分别发射一支、三支、五支额外青蒿箭矢<br>
+                额外青蒿箭矢在触碰到物块后会再次分裂成数个额外弹幕
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
-            <img src="NettlevineGreatbow.png" alt="NettlevineGreatbow" class="pwertGIF" loading="lazy">
+            <img src="NettlevineGreatbow.gif" alt="NettlevineGreatbow" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,14 +61,14 @@
             <img src="NettlevineGreatbow.png" alt="NettlevineGreatbow">
             <p class="item-id">内部名: 荆棘藤</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 73</p>
+            <p class="item-knockback">击退: 3</p>
+            <p class="item-usetimer">使用时间: 18</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                射出的箭矢会被染上剧毒<br>
+                每射击四次触发一轮青蒿扫射<br>
+                
             </p>
         </div>        
     </div>
