--- a/cn/weapon/NeutronScythe.html
+++ b/cn/weapon/NeutronScythe.html
@@ -46,7 +46,8 @@
                 镰刀在飞行时会向附近的目标发射伽马射线，并在飞行途中留下数个翘曲点<br>
                 有趣的是，当镰刀被墙壁反弹后并不会飞向玩家，而是折跃后再返回<br>
                 “他转身就走了，像下定了某种决心”<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                它的最佳前缀是<a href="https://calamitymod.wiki.gg/wiki/Modifiers" class="clickable-word">化境
+                </a>
             </p>
             <img src="NeutronScythewiki.gif" alt="NeutronScythe" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
@@ -68,9 +69,9 @@
             <p class="item-usetimer">使用时间: 16</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                镰刀会向敌人发射伽马射线，并在飞行途中留下数个翘曲点<br>
+                潜伏攻击会丢出一圈镰刀<br>
+                
             </p>
         </div>        
     </div>
