--- a/cn/weapon/Snowblindness.html
+++ b/cn/weapon/Snowblindness.html
@@ -39,14 +39,15 @@
         <main class="main-content">
             <h1>雪盲症</h1>
             <p> 
-                雪盲症是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                雪盲症是一把困难模式的雪球炮系列武器，由雪崩M60和激光步枪升级而来<br>
+                左键发射大量雪球和极寒射线，造成霜冻减益<br>
+                雪球可以追踪目标，并在击中目标时在四周生成数道EX极寒射线打击目标<br>
+                ”雪球炮中最有文采的一位“
+                
+                
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
-            <img src="Snowblindness.png" alt="Snowblindness" class="pwertGIF" loading="lazy">
+            <img src="Snowblindness.gif" alt="Snowblindness" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,14 +62,15 @@
             <img src="Snowblindness.png" alt="Snowblindness">
             <p class="item-id">内部名: Snowblindness</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 30</p>
+            <p class="item-knockback">击退: 1</p>
+            <p class="item-usetimer">使用时间: 3</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                高频率发射雪球和极寒射线<br>
+                命中敌人后在四周生成数道EX极寒射线<br>
+                “迷失在暴雪中，永恒的等待，痛苦地图，弯道超车，<br>
+                冻裂的镜片，干涸的血迹，红色的冰，哭泣的海狸，冰中人影“<br>
             </p>
         </div>        
     </div>
