--- a/cn/weapon/TheMaelstrom.html
+++ b/cn/weapon/TheMaelstrom.html
@@ -45,7 +45,7 @@
                 如果击中敌人，后续的攻击会额外释放一次水压炸弹，造成范围性伤害并施加激流减益<br>
                 右键在短暂蓄力后释放一个充能猎魂鲨<br>
                 充能猎魂鲨也至多可穿透一个敌人<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
             <img src="TheMaelstrom.gif" alt="TheMaelstrom" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
