--- a/cn/weapon/WaveSkipper.html
+++ b/cn/weapon/WaveSkipper.html
@@ -45,7 +45,7 @@
                 潜伏攻击左键投掷两发巨大的潜越沙牙
                 鼠标右键投掷弹跳沙牙，可以无限穿透敌人，并能在物块表面滑行和弹跳<br>  
                 潜伏攻击右键释放从天而降的数个沙牙<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                它的最佳前缀是<a href="https://calamitymod.wiki.gg/wiki/Modifiers" class="clickable-word">化境</a>
             </p>
             <img src="WaveSkipper.gif" alt="WaveSkipper" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
