--- a/cn/weapon/AvalancheM60.html
+++ b/cn/weapon/AvalancheM60.html
@@ -39,14 +39,13 @@
         <main class="main-content">
             <h1>雪崩M60</h1>
             <p> 
-                雪崩M60是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                雪崩M60是一把困难模式后的雪球炮系列武器由雪蝰MK2升级而来<br>
+                左键发射大量雪球和冰雹，并散发冰雾，造成霜冻、冻伤和冰河时代减益，火力会随弹量减少而增强<br>
+                每开火20次进入超载状态，瞬间喷发出大量雪球和冰雹，同时散发更宽更强的冰雾<br>
+                
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
-            <img src="AvalancheM60.png" alt="AvalancheM60" class="pwertGIF" loading="lazy">
+            <img src="AvalancheM60.gif" alt="AvalancheM60" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,14 +60,14 @@
             <img src="AvalancheM60.png" alt="AvalancheM60">
             <p class="item-id">内部名: 雪崩M60</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
+            <p class="item-damage">伤害: 62</p>
+            <p class="item-knockback">击退: 4</p>
             <p class="item-usetimer">使用时间: 10</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                发射大量雪球，火力随着弹药减少而变强<br>
+                每开火20次进入一次超频爆发，制造一次小型的雪崩<br>
+                “电次，我们来打雪仗吧”<br>
             </p>
         </div>        
     </div>
