--- a/cn/weapon/RebelBlade.html
+++ b/cn/weapon/RebelBlade.html
@@ -39,14 +39,13 @@
         <main class="main-content">
             <h1>叛逆之刃</h1>
             <p> 
-                叛逆之刃是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                叛逆之刃是一把月球领主后的真近战武器，由材料合成<br>
+                左键进行挥砍，并在目标附近生成大量恶魔光球<br>
+                右键操控剑刃飞行，剑刃命中目标或物块会反弹<br>
+                
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="RebelBlade.png" alt="RebelBlade" class="pwertGIF" loading="lazy">
+            <img src="RebelBlade.gif" alt="RebelBlade" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,14 +60,14 @@
             <img src="RebelBlade.png" alt="RebelBlade">
             <p class="item-id">内部名: RebelBlade</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 286</p>
+            <p class="item-knockback">击退: 6</p>
+            <p class="item-usetimer">使用时间: 30</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                真近战会在目标周围生成大量恶魔光球<br>
+                右键操纵剑刃飞行，并向光标处进行斩切<br>
+                
             </p>
         </div>        
     </div>
