--- a/cn/weapon/SDFMG.html
+++ b/cn/weapon/SDFMG.html
@@ -39,14 +39,13 @@
         <main class="main-content">
             <h1>SDFMG</h1>
             <p> 
-                SDFMG是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                SDFMG是一把月球领主后的射手武器，由太空海豚极强和腐臭倾泻者升级而来<br>
+                左键快速发射子弹，并有概率发射海洋导弹<br>
+                海洋导弹会追踪敌人<br>
+                
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
-            <img src="SDFMG.png" alt="SDFMG" class="pwertGIF" loading="lazy">
+            <img src="SDFMG.gif" alt="SDFMG" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,14 +60,14 @@
             <img src="SDFMG.png" alt="SDFMG">
             <p class="item-id">内部名: SDFMG</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 100</p>
+            <p class="item-knockback">击退: 3</p>
+            <p class="item-usetimer">使用时间: 2</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                有概率发射出一枚海洋导弹<br>
+                “枪体动力学的奇迹”<br>
+                
             </p>
         </div>        
     </div>
