--- a/cn/weapon/StormDragoon.html
+++ b/cn/weapon/StormDragoon.html
@@ -39,14 +39,12 @@
         <main class="main-content">
             <h1>风暴龙骑士</h1>
             <p> 
-                风暴龙骑士是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                风暴龙骑士是一把月球领主后的射手武器，掉落自风暴编织者<br>
+                左键快速倾泻子弹<br>
+                
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
-            <img src="StormDragoon.png" alt="StormDragoon" class="pwertGIF" loading="lazy">
+            <img src="StormDragoon.gif" alt="StormDragoon" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,14 +59,14 @@
             <img src="StormDragoon.png" alt="StormDragoon">
             <p class="item-id">内部名: 风暴龙骑士</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 68</p>
+            <p class="item-knockback">击退: 3</p>
+            <p class="item-usetimer">使用时间: 2</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                如狂风暴雨般倾泻子弹<br>
+                “我是即将到来的风暴”<br>
+                
             </p>
         </div>        
     </div>
