--- a/cn/weapon/TyrannysEnd.html
+++ b/cn/weapon/TyrannysEnd.html
@@ -39,14 +39,14 @@
         <main class="main-content">
             <h1>暴政之终</h1>
             <p> 
-                暴政之终是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                暴政之终是一把月球领主后的射手武器，由黄金之鹰和反器材狙击步枪升级而来<br>
+                左键发射威力巨大的狙击子弹，并造成死亡标记减益<br>
+                击中后产生金属射流，对目标身后的大片区域造成伤害<br>
+                <br>
+                <br>
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
-            <img src="TyrannysEnd.png" alt="TyrannysEnd" class="pwertGIF" loading="lazy">
+            <img src="TyrannysEnd.gif" alt="TyrannysEnd" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,14 +61,14 @@
             <img src="TyrannysEnd.png" alt="TyrannysEnd">
             <p class="item-id">内部名: 暴政之终</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 1500</p>
+            <p class="item-knockback">击退: 9</p>
+            <p class="item-usetimer">使用时间: 60</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                一把发射.70BMG子弹的重型反器材步枪<br>
+                击中后爆发出剧烈的金属射流杀伤大面积的敌人<br>
+                
             </p>
         </div>        
     </div>
